y.output
Terminals unused in grammar

    START
    END
    ELSEIF
    STRCMP
    INCR
    SMALLER_EQUAL
    GREATER_EQUAL
    STRING_TYPE


Grammar

    0 $accept: start_program $end

    1 start_program: declaration_section main_section
    2              | main_section
    3              | %empty

    4 declaration_section: declaration_section declaration_content
    5                    | declaration_content

    6 declaration_content: function_declaration
    7                    | object_declaration
    8                    | ';' create_variable

    9 $@1: %empty

   10 object_declaration: ID CLASS OPEN_CURLY_BRACKET $@1 object_content CLOSE_CURLY_BRACKET

   11 $@2: %empty

   12 object_declaration: ID CLASS OPEN_CURLY_BRACKET $@2 CLOSE_CURLY_BRACKET

   13 object_content: object_content inside_object
   14               | inside_object

   15 inside_object: function_declaration
   16              | ';' create_variable

   17 $@3: %empty

   18 function_declaration: OPEN_ROUND_BRACKET list_param CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@3 function_content return_statement CLOSE_CURLY_BRACKET

   19 $@4: %empty

   20 function_declaration: OPEN_ROUND_BRACKET list_param CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@4 CLOSE_CURLY_BRACKET

   21 $@5: %empty

   22 function_declaration: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@5 function_content return_statement CLOSE_CURLY_BRACKET

   23 $@6: %empty

   24 function_declaration: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@6 CLOSE_CURLY_BRACKET

   25 return_statement: RETURN expression
   26                 | %empty

   27 list_param: list_param ',' create_single_variable
   28           | create_single_variable

   29 function_content: function_content statements
   30                 | statements

   31 multiple_statements: multiple_statements statements
   32                    | statements

   33 statements: if_statement
   34           | while_statement
   35           | for_statement
   36           | ';' assign_statement
   37           | ';' create_variable
   38           | ';' function_call
   39           | ';' object_call_function

   40 function_call: '#' OPEN_ROUND_BRACKET list_call CLOSE_ROUND_BRACKET ID
   41              | '#' OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET ID

   42 list_call: expression ',' list_call
   43          | expression

   44 $@7: %empty

   45 $@8: %empty

   46 if_statement: OPEN_ROUND_BRACKET expression CLOSE_ROUND_BRACKET IF OPEN_CURLY_BRACKET $@7 multiple_statements CLOSE_CURLY_BRACKET $@8 else_statement

   47 $@9: %empty

   48 $@10: %empty

   49 if_statement: OPEN_ROUND_BRACKET expression CLOSE_ROUND_BRACKET IF OPEN_CURLY_BRACKET $@9 CLOSE_CURLY_BRACKET $@10 else_statement

   50 $@11: %empty

   51 else_statement: ELSE OPEN_CURLY_BRACKET $@11 multiple_statements CLOSE_CURLY_BRACKET

   52 $@12: %empty

   53 else_statement: ELSE OPEN_CURLY_BRACKET $@12 CLOSE_CURLY_BRACKET
   54               | %empty

   55 $@13: %empty

   56 while_statement: OPEN_ROUND_BRACKET expression CLOSE_ROUND_BRACKET WHILE OPEN_CURLY_BRACKET $@13 multiple_statements CLOSE_CURLY_BRACKET

   57 $@14: %empty

   58 while_statement: OPEN_ROUND_BRACKET expression CLOSE_ROUND_BRACKET WHILE OPEN_CURLY_BRACKET $@14 CLOSE_CURLY_BRACKET

   59 assign_statement: expression ASSIGN ID
   60                 | expression ASSIGN object_access_var
   61                 | expression ASSIGN access_vector

   62 $@15: %empty

   63 for_statement: OPEN_ROUND_BRACKET assign_statement ';' expression ';' expression CLOSE_ROUND_BRACKET FOR OPEN_CURLY_BRACKET $@15 multiple_statements CLOSE_CURLY_BRACKET

   64 $@16: %empty

   65 for_statement: OPEN_ROUND_BRACKET assign_statement ';' expression ';' expression CLOSE_ROUND_BRACKET FOR OPEN_CURLY_BRACKET $@16 CLOSE_CURLY_BRACKET

   66 $@17: %empty

   67 for_statement: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET FOR OPEN_CURLY_BRACKET $@17 CLOSE_CURLY_BRACKET

   68 create_variable: create_single_variable
   69                | '$' create_array_variable

   70 create_array_variable: '[' expression ']' ID available_types
   71                      | '[' expression ']' ID ID

   72 create_single_variable: '$' ID available_types
   73                       | '$' ID ID
   74                       | '$' expression ASSIGN ID available_types
   75                       | '$' expression ASSIGN ID ID
   76                       | '$' expression ASSIGN ID available_types CONST

   77 available_types: INT
   78                | CHAR
   79                | FLOAT
   80                | BOOL
   81                | STRING
   82                | VOID

   83 expression: ID
   84           | INT_VAL
   85           | FLOAT_VAL
   86           | BOOL_TRUE
   87           | BOOL_FALSE
   88           | STRING_VAL
   89           | CHAR_VAL
   90           | function_call
   91           | object_call_function
   92           | object_access_var
   93           | access_vector
   94           | OPEN_ROUND_BRACKET expression CLOSE_ROUND_BRACKET
   95           | expression ADD expression
   96           | expression MUL expression
   97           | expression DIV expression
   98           | expression MIN expression
   99           | expression BIGGER expression
  100           | expression SMALLER expression
  101           | expression EQUAL expression
  102           | STRCPY OPEN_ROUND_BRACKET expression expression CLOSE_ROUND_BRACKET
  103           | STRLEN OPEN_ROUND_BRACKET expression CLOSE_ROUND_BRACKET
  104           | STRCAT OPEN_ROUND_BRACKET expression expression CLOSE_ROUND_BRACKET

  105 object_call_function: function_call '.' ID

  106 object_access_var: ID '.' ID

  107 access_vector: '[' expression ']' ID

  108 $@18: %empty

  109 main_section: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET MAIN INT OPEN_CURLY_BRACKET $@18 multiple_statements CLOSE_CURLY_BRACKET

  110 $@19: %empty

  111 main_section: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET MAIN INT OPEN_CURLY_BRACKET $@19 CLOSE_CURLY_BRACKET


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 40 41
    '$' (36) 69 72 73 74 75 76
    ',' (44) 27 42
    '.' (46) 105 106
    ';' (59) 8 16 36 37 38 39 63 65
    '[' (91) 70 71 107
    ']' (93) 70 71 107
    error (256)
    START (258)
    END (259)
    ASSIGN (260) 59 60 61 74 75 76
    IF (261) 46 49
    ELSEIF (262)
    WHILE (263) 56 58
    FOR (264) 63 65 67
    STRCPY (265) 102
    STRLEN (266) 103
    STRCMP (267)
    STRCAT (268) 104
    ADD (269) 95
    DIV (270) 97
    BIGGER (271) 99
    SMALLER (272) 100
    MIN (273) 98
    MUL (274) 96
    EQUAL (275) 101
    OPEN_ROUND_BRACKET (276) 18 20 22 24 40 41 46 49 56 58 63 65 67 94 102 103 104 109 111
    CLOSE_ROUND_BRACKET (277) 18 20 22 24 40 41 46 49 56 58 63 65 67 94 102 103 104 109 111
    CLOSE_CURLY_BRACKET (278) 10 12 18 20 22 24 46 49 51 53 56 58 63 65 67 109 111
    OPEN_CURLY_BRACKET (279) 10 12 18 20 22 24 46 49 51 53 56 58 63 65 67 109 111
    INCR (280)
    CLASS (281) 10 12
    MAIN (282) 109 111
    ELSE (283) 51 53
    SMALLER_EQUAL (284)
    BOOL_TRUE (285) 86
    BOOL_FALSE (286) 87
    GREATER_EQUAL (287)
    STRING_TYPE (288)
    CONST (289) 76
    RETURN (290) 25
    ID <strname> (291) 10 12 18 20 22 24 40 41 59 70 71 72 73 74 75 76 83 105 106 107
    INT_VAL <intval> (292) 84
    STRING_VAL <strval> (293) 88
    FLOAT_VAL <floatval> (294) 85
    CHAR_VAL <charval> (295) 89
    INT <type> (296) 77 109 111
    STRING <type> (297) 81
    FLOAT <type> (298) 79
    CHAR <type> (299) 78
    BOOL <type> (300) 80
    VOID <type> (301) 82


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    start_program (55)
        on left: 1 2 3
        on right: 0
    declaration_section (56)
        on left: 4 5
        on right: 1 4
    declaration_content (57)
        on left: 6 7 8
        on right: 4 5
    object_declaration (58)
        on left: 10 12
        on right: 7
    $@1 (59)
        on left: 9
        on right: 10
    $@2 (60)
        on left: 11
        on right: 12
    object_content (61)
        on left: 13 14
        on right: 10 13
    inside_object (62)
        on left: 15 16
        on right: 13 14
    function_declaration (63)
        on left: 18 20 22 24
        on right: 6 15
    $@3 (64)
        on left: 17
        on right: 18
    $@4 (65)
        on left: 19
        on right: 20
    $@5 (66)
        on left: 21
        on right: 22
    $@6 (67)
        on left: 23
        on right: 24
    return_statement (68)
        on left: 25 26
        on right: 18 22
    list_param (69)
        on left: 27 28
        on right: 18 20 27
    function_content (70)
        on left: 29 30
        on right: 18 22 29
    multiple_statements (71)
        on left: 31 32
        on right: 31 46 51 56 63 109
    statements (72)
        on left: 33 34 35 36 37 38 39
        on right: 29 30 31 32
    function_call (73)
        on left: 40 41
        on right: 38 90 105
    list_call (74)
        on left: 42 43
        on right: 40 42
    if_statement (75)
        on left: 46 49
        on right: 33
    $@7 (76)
        on left: 44
        on right: 46
    $@8 (77)
        on left: 45
        on right: 46
    $@9 (78)
        on left: 47
        on right: 49
    $@10 (79)
        on left: 48
        on right: 49
    else_statement (80)
        on left: 51 53 54
        on right: 46 49
    $@11 (81)
        on left: 50
        on right: 51
    $@12 (82)
        on left: 52
        on right: 53
    while_statement (83)
        on left: 56 58
        on right: 34
    $@13 (84)
        on left: 55
        on right: 56
    $@14 (85)
        on left: 57
        on right: 58
    assign_statement (86)
        on left: 59 60 61
        on right: 36 63 65
    for_statement (87)
        on left: 63 65 67
        on right: 35
    $@15 (88)
        on left: 62
        on right: 63
    $@16 (89)
        on left: 64
        on right: 65
    $@17 (90)
        on left: 66
        on right: 67
    create_variable (91)
        on left: 68 69
        on right: 8 16 37
    create_array_variable (92)
        on left: 70 71
        on right: 69
    create_single_variable (93)
        on left: 72 73 74 75 76
        on right: 27 28 68
    available_types <type> (94)
        on left: 77 78 79 80 81 82
        on right: 18 20 22 24 70 72 74 76
    expression (95)
        on left: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
        on right: 25 42 43 46 49 56 58 59 60 61 63 65 70 71 74 75 76 94 95 96 97 98 99 100 101 102 103 104 107
    object_call_function (96)
        on left: 105
        on right: 39 91
    object_access_var (97)
        on left: 106
        on right: 60 92
    access_vector (98)
        on left: 107
        on right: 61 93
    main_section (99)
        on left: 109 111
        on right: 1 2
    $@18 (100)
        on left: 108
        on right: 109
    $@19 (101)
        on left: 110
        on right: 111


State 0

    0 $accept: . start_program $end

    OPEN_ROUND_BRACKET  shift, and go to state 1
    ID                  shift, and go to state 2
    ';'                 shift, and go to state 3

    $default  reduce using rule 3 (start_program)

    start_program         go to state 4
    declaration_section   go to state 5
    declaration_content   go to state 6
    object_declaration    go to state 7
    function_declaration  go to state 8
    main_section          go to state 9


State 1

   18 function_declaration: OPEN_ROUND_BRACKET . list_param CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@3 function_content return_statement CLOSE_CURLY_BRACKET
   20                     | OPEN_ROUND_BRACKET . list_param CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@4 CLOSE_CURLY_BRACKET
   22                     | OPEN_ROUND_BRACKET . CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@5 function_content return_statement CLOSE_CURLY_BRACKET
   24                     | OPEN_ROUND_BRACKET . CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@6 CLOSE_CURLY_BRACKET
  109 main_section: OPEN_ROUND_BRACKET . CLOSE_ROUND_BRACKET MAIN INT OPEN_CURLY_BRACKET $@18 multiple_statements CLOSE_CURLY_BRACKET
  111             | OPEN_ROUND_BRACKET . CLOSE_ROUND_BRACKET MAIN INT OPEN_CURLY_BRACKET $@19 CLOSE_CURLY_BRACKET

    CLOSE_ROUND_BRACKET  shift, and go to state 10
    '$'                  shift, and go to state 11

    list_param              go to state 12
    create_single_variable  go to state 13


State 2

   10 object_declaration: ID . CLASS OPEN_CURLY_BRACKET $@1 object_content CLOSE_CURLY_BRACKET
   12                   | ID . CLASS OPEN_CURLY_BRACKET $@2 CLOSE_CURLY_BRACKET

    CLASS  shift, and go to state 14


State 3

    8 declaration_content: ';' . create_variable

    '$'  shift, and go to state 15

    create_variable         go to state 16
    create_single_variable  go to state 17


State 4

    0 $accept: start_program . $end

    $end  shift, and go to state 18


State 5

    1 start_program: declaration_section . main_section
    4 declaration_section: declaration_section . declaration_content

    OPEN_ROUND_BRACKET  shift, and go to state 1
    ID                  shift, and go to state 2
    ';'                 shift, and go to state 3

    declaration_content   go to state 19
    object_declaration    go to state 7
    function_declaration  go to state 8
    main_section          go to state 20


State 6

    5 declaration_section: declaration_content .

    $default  reduce using rule 5 (declaration_section)


State 7

    7 declaration_content: object_declaration .

    $default  reduce using rule 7 (declaration_content)


State 8

    6 declaration_content: function_declaration .

    $default  reduce using rule 6 (declaration_content)


State 9

    2 start_program: main_section .

    $default  reduce using rule 2 (start_program)


State 10

   22 function_declaration: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET . ID available_types OPEN_CURLY_BRACKET $@5 function_content return_statement CLOSE_CURLY_BRACKET
   24                     | OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET . ID available_types OPEN_CURLY_BRACKET $@6 CLOSE_CURLY_BRACKET
  109 main_section: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET . MAIN INT OPEN_CURLY_BRACKET $@18 multiple_statements CLOSE_CURLY_BRACKET
  111             | OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET . MAIN INT OPEN_CURLY_BRACKET $@19 CLOSE_CURLY_BRACKET

    MAIN  shift, and go to state 21
    ID    shift, and go to state 22


State 11

   72 create_single_variable: '$' . ID available_types
   73                       | '$' . ID ID
   74                       | '$' . expression ASSIGN ID available_types
   75                       | '$' . expression ASSIGN ID ID
   76                       | '$' . expression ASSIGN ID available_types CONST

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 29
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 35

    function_call         go to state 36
    expression            go to state 37
    object_call_function  go to state 38
    object_access_var     go to state 39
    access_vector         go to state 40


State 12

   18 function_declaration: OPEN_ROUND_BRACKET list_param . CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@3 function_content return_statement CLOSE_CURLY_BRACKET
   20                     | OPEN_ROUND_BRACKET list_param . CLOSE_ROUND_BRACKET ID available_types OPEN_CURLY_BRACKET $@4 CLOSE_CURLY_BRACKET
   27 list_param: list_param . ',' create_single_variable

    CLOSE_ROUND_BRACKET  shift, and go to state 41
    ','                  shift, and go to state 42


State 13

   28 list_param: create_single_variable .

    $default  reduce using rule 28 (list_param)


State 14

   10 object_declaration: ID CLASS . OPEN_CURLY_BRACKET $@1 object_content CLOSE_CURLY_BRACKET
   12                   | ID CLASS . OPEN_CURLY_BRACKET $@2 CLOSE_CURLY_BRACKET

    OPEN_CURLY_BRACKET  shift, and go to state 43


State 15

   69 create_variable: '$' . create_array_variable
   72 create_single_variable: '$' . ID available_types
   73                       | '$' . ID ID
   74                       | '$' . expression ASSIGN ID available_types
   75                       | '$' . expression ASSIGN ID ID
   76                       | '$' . expression ASSIGN ID available_types CONST

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 29
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 44

    function_call          go to state 36
    create_array_variable  go to state 45
    expression             go to state 37
    object_call_function   go to state 38
    object_access_var      go to state 39
    access_vector          go to state 40


State 16

    8 declaration_content: ';' create_variable .

    $default  reduce using rule 8 (declaration_content)


State 17

   68 create_variable: create_single_variable .

    $default  reduce using rule 68 (create_variable)


State 18

    0 $accept: start_program $end .

    $default  accept


State 19

    4 declaration_section: declaration_section declaration_content .

    $default  reduce using rule 4 (declaration_section)


State 20

    1 start_program: declaration_section main_section .

    $default  reduce using rule 1 (start_program)


State 21

  109 main_section: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET MAIN . INT OPEN_CURLY_BRACKET $@18 multiple_statements CLOSE_CURLY_BRACKET
  111             | OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET MAIN . INT OPEN_CURLY_BRACKET $@19 CLOSE_CURLY_BRACKET

    INT  shift, and go to state 46


State 22

   22 function_declaration: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET ID . available_types OPEN_CURLY_BRACKET $@5 function_content return_statement CLOSE_CURLY_BRACKET
   24                     | OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET ID . available_types OPEN_CURLY_BRACKET $@6 CLOSE_CURLY_BRACKET

    INT     shift, and go to state 47
    STRING  shift, and go to state 48
    FLOAT   shift, and go to state 49
    CHAR    shift, and go to state 50
    BOOL    shift, and go to state 51
    VOID    shift, and go to state 52

    available_types  go to state 53


State 23

  102 expression: STRCPY . OPEN_ROUND_BRACKET expression expression CLOSE_ROUND_BRACKET

    OPEN_ROUND_BRACKET  shift, and go to state 54


State 24

  103 expression: STRLEN . OPEN_ROUND_BRACKET expression CLOSE_ROUND_BRACKET

    OPEN_ROUND_BRACKET  shift, and go to state 55


State 25

  104 expression: STRCAT . OPEN_ROUND_BRACKET expression expression CLOSE_ROUND_BRACKET

    OPEN_ROUND_BRACKET  shift, and go to state 56


State 26

   94 expression: OPEN_ROUND_BRACKET . expression CLOSE_ROUND_BRACKET

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 57
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 35

    function_call         go to state 36
    expression            go to state 58
    object_call_function  go to state 38
    object_access_var     go to state 39
    access_vector         go to state 40


State 27

   86 expression: BOOL_TRUE .

    $default  reduce using rule 86 (expression)


State 28

   87 expression: BOOL_FALSE .

    $default  reduce using rule 87 (expression)


State 29

   72 create_single_variable: '$' ID . available_types
   73                       | '$' ID . ID
   83 expression: ID .
  106 object_access_var: ID . '.' ID

    ID      shift, and go to state 59
    INT     shift, and go to state 47
    STRING  shift, and go to state 48
    FLOAT   shift, and go to state 49
    CHAR    shift, and go to state 50
    BOOL    shift, and go to state 51
    VOID    shift, and go to state 52
    '.'     shift, and go to state 60

    $default  reduce using rule 83 (expression)

    available_types  go to state 61


State 30

   84 expression: INT_VAL .

    $default  reduce using rule 84 (expression)


State 31

   88 expression: STRING_VAL .

    $default  reduce using rule 88 (expression)


State 32

   85 expression: FLOAT_VAL .

    $default  reduce using rule 85 (expression)


State 33

   89 expression: CHAR_VAL .

    $default  reduce using rule 89 (expression)


State 34

   40 function_call: '#' . OPEN_ROUND_BRACKET list_call CLOSE_ROUND_BRACKET ID
   41              | '#' . OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET ID

    OPEN_ROUND_BRACKET  shift, and go to state 62


State 35

  107 access_vector: '[' . expression ']' ID

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 57
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 35

    function_call         go to state 36
    expression            go to state 63
    object_call_function  go to state 38
    object_access_var     go to state 39
    access_vector         go to state 40


State 36

   90 expression: function_call .
  105 object_call_function: function_call . '.' ID

    '.'  shift, and go to state 64

    $default  reduce using rule 90 (expression)


State 37

   74 create_single_variable: '$' expression . ASSIGN ID available_types
   75                       | '$' expression . ASSIGN ID ID
   76                       | '$' expression . ASSIGN ID available_types CONST
   95 expression: expression . ADD expression
   96           | expression . MUL expression
   97           | expression . DIV expression
   98           | expression . MIN expression
   99           | expression . BIGGER expression
  100           | expression . SMALLER expression
  101           | expression . EQUAL expression

    ASSIGN   shift, and go to state 65
    ADD      shift, and go to state 66
    DIV      shift, and go to state 67
    BIGGER   shift, and go to state 68
    SMALLER  shift, and go to state 69
    MIN      shift, and go to state 70
    MUL      shift, and go to state 71
    EQUAL    shift, and go to state 72


State 38

   91 expression: object_call_function .

    $default  reduce using rule 91 (expression)


State 39

   92 expression: object_access_var .

    $default  reduce using rule 92 (expression)


State 40

   93 expression: access_vector .

    $default  reduce using rule 93 (expression)


State 41

   18 function_declaration: OPEN_ROUND_BRACKET list_param CLOSE_ROUND_BRACKET . ID available_types OPEN_CURLY_BRACKET $@3 function_content return_statement CLOSE_CURLY_BRACKET
   20                     | OPEN_ROUND_BRACKET list_param CLOSE_ROUND_BRACKET . ID available_types OPEN_CURLY_BRACKET $@4 CLOSE_CURLY_BRACKET

    ID  shift, and go to state 73


State 42

   27 list_param: list_param ',' . create_single_variable

    '$'  shift, and go to state 11

    create_single_variable  go to state 74


State 43

   10 object_declaration: ID CLASS OPEN_CURLY_BRACKET . $@1 object_content CLOSE_CURLY_BRACKET
   12                   | ID CLASS OPEN_CURLY_BRACKET . $@2 CLOSE_CURLY_BRACKET

    CLOSE_CURLY_BRACKET  reduce using rule 11 ($@2)
    $default             reduce using rule 9 ($@1)

    $@1  go to state 75
    $@2  go to state 76


State 44

   70 create_array_variable: '[' . expression ']' ID available_types
   71                      | '[' . expression ']' ID ID
  107 access_vector: '[' . expression ']' ID

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 57
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 35

    function_call         go to state 36
    expression            go to state 77
    object_call_function  go to state 38
    object_access_var     go to state 39
    access_vector         go to state 40


State 45

   69 create_variable: '$' create_array_variable .

    $default  reduce using rule 69 (create_variable)


State 46

  109 main_section: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET MAIN INT . OPEN_CURLY_BRACKET $@18 multiple_statements CLOSE_CURLY_BRACKET
  111             | OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET MAIN INT . OPEN_CURLY_BRACKET $@19 CLOSE_CURLY_BRACKET

    OPEN_CURLY_BRACKET  shift, and go to state 78


State 47

   77 available_types: INT .

    $default  reduce using rule 77 (available_types)


State 48

   81 available_types: STRING .

    $default  reduce using rule 81 (available_types)


State 49

   79 available_types: FLOAT .

    $default  reduce using rule 79 (available_types)


State 50

   78 available_types: CHAR .

    $default  reduce using rule 78 (available_types)


State 51

   80 available_types: BOOL .

    $default  reduce using rule 80 (available_types)


State 52

   82 available_types: VOID .

    $default  reduce using rule 82 (available_types)


State 53

   22 function_declaration: OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET ID available_types . OPEN_CURLY_BRACKET $@5 function_content return_statement CLOSE_CURLY_BRACKET
   24                     | OPEN_ROUND_BRACKET CLOSE_ROUND_BRACKET ID available_types . OPEN_CURLY_BRACKET $@6 CLOSE_CURLY_BRACKET

    OPEN_CURLY_BRACKET  shift, and go to state 79


State 54

  102 expression: STRCPY OPEN_ROUND_BRACKET . expression expression CLOSE_ROUND_BRACKET

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 57
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 35

    function_call         go to state 36
    expression            go to state 80
    object_call_function  go to state 38
    object_access_var     go to state 39
    access_vector         go to state 40


State 55

  103 expression: STRLEN OPEN_ROUND_BRACKET . expression CLOSE_ROUND_BRACKET

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 57
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 35

    function_call         go to state 36
    expression            go to state 81
    object_call_function  go to state 38
    object_access_var     go to state 39
    access_vector         go to state 40


State 56

  104 expression: STRCAT OPEN_ROUND_BRACKET . expression expression CLOSE_ROUND_BRACKET

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 57
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 35

    function_call         go to state 36
    expression            go to state 82
    object_call_function  go to state 38
    object_access_var     go to state 39
    access_vector         go to state 40


State 57

   83 expression: ID .
  106 object_access_var: ID . '.' ID

    '.'  shift, and go to state 60

    $default  reduce using rule 83 (expression)


State 58

   94 expression: OPEN_ROUND_BRACKET expression . CLOSE_ROUND_BRACKET
   95           | expression . ADD expression
   96           | expression . MUL expression
   97           | expression . DIV expression
   98           | expression . MIN expression
   99           | expression . BIGGER expression
  100           | expression . SMALLER expression
  101           | expression . EQUAL expression

    ADD                  shift, and go to state 66
    DIV                  shift, and go to state 67
    BIGGER               shift, and go to state 68
    SMALLER              shift, and go to state 69
    MIN                  shift, and go to state 70
    MUL                  shift, and go to state 71
    EQUAL                shift, and go to state 72
    CLOSE_ROUND_BRACKET  shift, and go to state 83


State 59

   73 create_single_variable: '$' ID ID .

    $default  reduce using rule 73 (create_single_variable)


State 60

  106 object_access_var: ID '.' . ID

    ID  shift, and go to state 84


State 61

   72 create_single_variable: '$' ID available_types .

    $default  reduce using rule 72 (create_single_variable)


State 62

   40 function_call: '#' OPEN_ROUND_BRACKET . list_call CLOSE_ROUND_BRACKET ID
   41              | '#' OPEN_ROUND_BRACKET . CLOSE_ROUND_BRACKET ID

    STRCPY               shift, and go to state 23
    STRLEN               shift, and go to state 24
    STRCAT               shift, and go to state 25
    OPEN_ROUND_BRACKET   shift, and go to state 26
    CLOSE_ROUND_BRACKET  shift, and go to state 85
    BOOL_TRUE            shift, and go to state 27
    BOOL_FALSE           shift, and go to state 28
    ID                   shift, and go to state 57
    INT_VAL              shift, and go to state 30
    STRING_VAL           shift, and go to state 31
    FLOAT_VAL            shift, and go to state 32
    CHAR_VAL             shift, and go to state 33
    '#'                  shift, and go to state 34
    '['                  shift, and go to state 35

    function_call         go to state 36
    list_call             go to state 86
    expression            go to state 87
    object_call_function  go to state 38
    object_access_var     go to state 39
    access_vector         go to state 40


State 63

   95 expression: expression . ADD expression
   96           | expression . MUL expression
   97           | expression . DIV expression
   98           | expression . MIN expression
   99           | expression . BIGGER expression
  100           | expression . SMALLER expression
  101           | expression . EQUAL expression
  107 access_vector: '[' expression . ']' ID

    ADD      shift, and go to state 66
    DIV      shift, and go to state 67
    BIGGER   shift, and go to state 68
    SMALLER  shift, and go to state 69
    MIN      shift, and go to state 70
    MUL      shift, and go to state 71
    EQUAL    shift, and go to state 72
    ']'      shift, and go to state 88


State 64

  105 object_call_function: function_call '.' . ID

    ID  shift, and go to state 89


State 65

   74 create_single_variable: '$' expression ASSIGN . ID available_types
   75                       | '$' expression ASSIGN . ID ID
   76                       | '$' expression ASSIGN . ID available_types CONST

    ID  shift, and go to state 90


State 66

   95 expression: expression ADD . expression

    STRCPY              shift, and go to state 23
    STRLEN              shift, and go to state 24
    STRCAT              shift, and go to state 25
    OPEN_ROUND_BRACKET  shift, and go to state 26
    BOOL_TRUE           shift, and go to state 27
    BOOL_FALSE          shift, and go to state 28
    ID                  shift, and go to state 57
    INT_VAL             shift, and go to state 30
    STRING_VAL          shift, and go to state 31
    FLOAT_VAL           shift, and go to state 32
    CHAR_VAL            shift, and go to state 33
    '#'                 shift, and go to state 34
    '['                 shift, and go to state 35
